VPC-TF/securityGroups.tf
resource "aws_security_group" "webSG" {
  description = "Allow ssh inbound and outbound traffic"
  name        = "allow_ssh"
  vpc_id      = "${aws_vpc.MainVPC.id}"

  ingress {
    description = "ssh from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "http from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }


  tags = {
    Name = "WEB-SG"
  }
  // depends_on = ["aws_vpc.MainVPC.MainVPC-TF"]
}
